# kalshi-weather-bot

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  config.yaml  pyproject.toml
src/kalshi_weather_bot/: __main__.py  cli.py  config.py  logging_setup.py
src/kalshi_weather_bot/alerts/: notifier.py
src/kalshi_weather_bot/dashboard/: app.py  queries.py  template.html
src/kalshi_weather_bot/edge/: detector.py  fees.py  implied.py  inspect.py
src/kalshi_weather_bot/execution/: broker.py  paper.py  router.py  sizing.py
src/kalshi_weather_bot/kalshi/: auth.py  client.py  markets.py  models.py  orders.py
src/kalshi_weather_bot/probability/: distributions.py  threshold.py
src/kalshi_weather_bot/recorder/: db.py  schema.sql  settlements.py  snapshot.py
src/kalshi_weather_bot/risk/: health.py  killswitch.py  limits.py
src/kalshi_weather_bot/scheduler/: daemon.py  loop.py
src/kalshi_weather_bot/util/: retry.py  time_utils.py
src/kalshi_weather_bot/weather/: models.py  nws.py  openmeteo.py  stations.py
tests/: conftest.py
tests/fixtures/: kalshi_markets.json  openmeteo_ensemble.json
tests/integration/: test_live_fetch.py
tests/unit/: test_auth.py  test_config.py  test_distributions.py  test_edge_detector.py  test_edge_fees.py  test_edge_implied.py  test_edge_inspect.py  test_execution.py  test_kalshi_orders.py  test_markets.py  test_openmeteo_parse.py  test_recorder.py  test_risk_health.py  test_risk_killswitch.py  test_risk_limits.py  test_scheduler_daemon.py  test_scheduler_loop.py  test_settlements.py  test_stations.py  test_threshold.py
