[project]
name = "kalshi-weather-bot"
version = "0.1.0"
description = "Systematic trading bot for Kalshi weather markets using ensemble forecasts."
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pyyaml==6.0.2",
    "cryptography==43.0.1",
    "aiosqlite==0.20.0",
    "apscheduler==3.10.4",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "numpy==2.1.2",
    "scipy==1.14.1",
    "typer==0.12.5",
    "click>=8.1,<8.2",               # pinned: typer 0.12 breaks with click >= 8.2 (Parameter.make_metavar sig change)
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.32.0",
    "freezegun==1.5.1",
    "hypothesis==6.112.1",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[project.scripts]
kalshi-weather-bot = "kalshi_weather_bot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_weather_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: hits live APIs; gated by RUN_INTEGRATION=1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
